--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ server.port=9889
 server.servlet.context-path=/api/
 spring.datasource.url=jdbc:mysql://localhost:3306/bhyt?useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=new_password
+spring.datasource.password=rootroot
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
